# backend/models/owners.go
@@ -1,9 +1,19 @@
 package models
 
-import "gorm.io/gorm"
+import (
+	"time"
+)
 
 type Owners struct {
-	gorm.Model
+	Base
 	Login    string `json:"login"`
 	Password string `json:"password"`
 }
+
+type Credential struct {
+	ID          uint      `json:"id"`
+	CreatedAt   time.Time `json:"created_at"`
+	AccessToken string    `json:"access_token"`
+}
+
+type OwnerResponse = SuccessResponseWithData[Credential]
