# backend/models/rental-report.go
@@ -5,3 +5,5 @@ type RentalReport struct {
 	Total_completed_rent int64  `json:"total_completed_rent"`
 	Rents                []User `json:"rents"`
 }
+
+type SuccessRentalResponse = SuccessResponseWithMeta[RentalReport]
