# backend/models/success-response.go
@@ -1,8 +1,19 @@
 package models
 
-type SuccessResponse[T any] struct {
+type SuccessResponseWithMeta[T any] struct {
 	Status  int       `json:"status"`
 	Message string    `json:"message"`
 	Data    T         `json:"data,omitzero"`
 	Meta    MetaModel `json:"meta,omitzero"`
+}
+
+type SuccessResponseWithData[T any] struct {
+	Status  int    `json:"status"`
+	Message string `json:"message"`
+	Data    T      `json:"data,omitzero"`
+}
+
+type SuccessResponse struct {
+	Status  int    `json:"status"`
+	Message string `json:"message"`
 }
