# backend/models/warehouse-tools.go
@@ -5,3 +5,7 @@ type WarehouseTools struct {
 	Name string `json:"name"`
 	Size string `json:"size"`
 }
+
+type WarehouseToolsResponse = SuccessResponseWithMeta[[]WarehouseTools]
+type WarehouseToolsCreateResponse = SuccessResponseWithData[[]WarehouseTools]
+type WarehouseToolsUpdateResponse = SuccessResponseWithData[WarehouseTools]
